<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/storeFragment">

    <RelativeLayout
        android:id="@+id/storeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/storeAdFreeCard"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/log_list_item_padding"
            card_view:cardCornerRadius="@dimen/cardview_default_radius"
            card_view:cardElevation="@dimen/cardview_default_elevation"
            card_view:cardPreventCornerOverlap="true"
            card_view:cardUseCompatPadding="true"
            card_view:cardBackgroundColor="@android:color/white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp">

                <TextView
                    android:id="@+id/storeAdFreeTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="26sp"
                    android:text="@string/ad_free"
                    android:layout_alignParentTop="true"/>

                <View
                    android:id="@+id/storeAdFreeTitleLine"
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:background="@android:color/transparent"
                    android:layout_below="@id/storeAdFreeTitle"/>

                <TextView
                    android:id="@+id/storeAdFreeDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/buy_ad_free_desc"
                    android:layout_below="@id/storeAdFreeTitleLine"/>

                <View
                    android:id="@+id/storeAdFreeDescLine"
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:background="@android:color/transparent"
                    android:layout_below="@id/storeAdFreeDesc"/>

                <Button
                    android:id="@+id/storeAdFreeBuy"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_below="@id/storeAdFreeDescLine"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/buy_ad_free"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    android:background="@android:color/transparent"/>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>